{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 39,
  "lineage": "00e88b00-c09f-25d3-dba2-10064dc04928",
  "resources": [
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "km_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:security-group/sg-019be67774996ca9d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019be67774996ca9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "km_rds_sg",
            "name_prefix": "",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "km_rds_sg_dev"
            },
            "tags_all": {
              "Name": "km_rds_sg_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0167776c8cf77f12d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:subnet/subnet-0b7e1311a8f11c812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b7e1311a8f11c812",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0167776c8cf77f12d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:subnet/subnet-00eec7bb5a2cfcf87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-00eec7bb5a2cfcf87",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-0167776c8cf77f12d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:security-group/sg-05477069da560c45a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05477069da560c45a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0167776c8cf77f12d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:security-group/sg-04593f1b67fb53be6",
            "description": "Allow SSH inbound from anywhere",
            "egress": [],
            "id": "sg-04593f1b67fb53be6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0167776c8cf77f12d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_with_valid_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:security-group/sg-0334b084c69e30f75",
            "description": "Allow SSH inbound from specific range",
            "egress": [],
            "id": "sg-0334b084c69e30f75",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_with_valid_cidr",
            "name_prefix": "",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0167776c8cf77f12d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:300326902600:vpc/vpc-0167776c8cf77f12d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a816c14c9d7ccbf",
            "default_route_table_id": "rtb-06ac2b3302de99ab9",
            "default_security_group_id": "sg-05477069da560c45a",
            "dhcp_options_id": "dopt-5fb3eb38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0167776c8cf77f12d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06ac2b3302de99ab9",
            "owner_id": "300326902600"
          }
        }
      ]
    }
  ]
}